[tool.poetry]
name = "rl-character-animation-tutorial"
version = "0.1.0"
description = ""
authors = ["Akihisa-Watanabe <akihisa@ruri.waseda.jp>"]
license = ""
readme = "README.md"
packages = [{include = "rl_character_animation_tutorial"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
box2d-py = "^2.3.5"
torch = "2.0.1"
dm-control = "^1.0.13"
gym = {version = "0.26.2", extras = ["accept-rom-license"]}
matplotlib = "^3.7.1"
numpy = "^1.25.0"
pyyaml = "^6.0"
pygame = "2.1.0"
tensorboardx = "^2.6.1"
tensorboard = "^2.14.0"
pandas = "^2.1.1"
opencv-python = "4.8.1.78"


[tool.poetry.group.dev.dependencies]
isort = "^5.12.0"
flake8 = "^6.1.0"
types-pyyaml = "^6.0.12.12"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
include_trailing_comma = true
multi_line_output = 3
skip = "third_party"
skip_gitignore = true
use_parentheses = true
